--- a/requirements.txt
+++ b/requirements.txt
@@ -1,210 +1,118 @@
-absl-py==0.11.0
-wheel==0.35.0
-alabaster==0.7.12
-anaconda-client==1.2.2
-
-appdirs==1.4.4
-argh==0.26.2
-
-astunparse==1.6.3
-async-generator==1.10
-atomicwrites==1.4.0
-
-backcall==0.2.0
-
-backports.tempfile==1.0
-backports.weakref==1.0.post1
-
-bkcharts==0.2
-black==19.10b0
-
-boto==2.49.0
-Bottleneck==1.3.2
-brotlipy==0.7.0
-cachetools==4.2.0
-certifi==2020.12.5
-
-click==7.1.2
-
-clyent==1.2.1
-
-comtypes==1.1.8
-conda==4.3.16
-conda-build==2.1.5
-
-
-contextlib2==0.6.0.post1
-
+absl-py==0.7.1
+args==0.1.0
+asn1crypto==0.24.0
+astor==0.7.1
+atomicwrites==1.3.0
+attrs==19.1.0
+backcall==0.1.0
+bleach==3.1.0
+certifi==2019.3.9
+cffi==1.11.5
+chardet==3.0.4
+click==6.7
+clint==0.5.1
+cryptography==2.4.2
 cycler==0.10.0
-
-cytoolz==0.11.0
-
-decorator==4.4.2
-defusedxml==0.6.0
-
-distlib==0.3.1
-
-docutils==0.16
+dash==0.39.0
+dash-core-components==0.44.0
+dash-cytoscape==0.1.1
+dash-html-components==0.14.0
+dash-renderer==0.20.0
+dash-table==3.6.0
+dash-table-experiments==0.6.0
+decorator==4.4.0
+defusedxml==0.5.0
+dill==0.2.9
 entrypoints==0.3
-et-xmlfile==1.0.1
-fastcache==1.1.0
-filelock==3.0.12
-
-Flask==1.1.2
-flatbuffers==1.12
-
-future==0.18.2
-gast==0.3.3
-
-glob2==0.7
-gmpy2==2.0.8
-google-auth==1.24.0
-google-auth-oauthlib==0.4.2
-google-pasta==0.2.0
-
-grpcio==1.32.0
-gunicorn==20.0.4
-h5py==2.10.0
-HeapDict==1.0.1
-
-imagesize==1.2.0
-
+Flask==1.0.2
+Flask-Compress==1.4.0
+floyd-cli==0.11.17
+future==0.17.1
+gast==0.2.2
+gevent==1.4.0
+github3.py==1.3.0
+google-pasta==0.1.6
+googleapis-common-protos==1.6.0
+graphviz==0.10.1
+greenlet==0.4.15
+grpcio==1.20.1
+gunicorn==19.9.0
+h5py==2.9.0
+hypothesis==4.23.5
+idna==2.8
+imageio==2.5.0
 itsdangerous==1.1.0
-jdcal==1.4.1
-
-Jinja2==2.11.2
-
-json5==0.9.5
-
-jupyter==1.0.0
-
-jupyterlab==2.2.6
-
-Keras==2.4.3
-Keras-Preprocessing==1.1.2
-
-libarchive-c==2.9
-llvmlite==0.34.0
-locket==0.2.0
-
-Markdown==3.3.3
+jedi==0.13.3
+Jinja2==2.10
+joblib==0.13.2
+jsonschema==3.0.1
+kiwisolver==1.0.1
+lime==0.1.1.34
+lxml==4.3.3
+Markdown==3.1
 MarkupSafe==1.1.1
-
-mccabe==0.6.1
-
-
+marshmallow==2.19.2
 mistune==0.8.4
-
-
-mock==4.0.2
-
-mpmath==1.1.0
-
-multipledispatch==0.6.0
-mypy-extensions==0.4.3
-
-
-numba==0.51.2
-
-oauthlib==3.1.0
-olefile==0.46
-
-opt-einsum==3.3.0
-
-parso==0.7.0
-partd==1.1.0
-
-pathspec==0.7.0
-pathtools==0.1.2
-patsy==0.5.1
-pep8==1.7.1
-
-pkginfo==1.6.1
-pluggy==0.13.1
-ply==3.11
-
-protobuf==3.14.0
-
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle==2.6.0
+numpy==1.16.2
+oauthlib==3.0.1
+pandas==0.24.2
+pandocfilters==1.4.2
+parso==0.3.4
+pathlib2==2.3.3
+pathos==0.2.3
+pexpect==4.6.0
+pickleshare==0.7.5
+Pillow==6.0.0
+plotly==3.9.0
+pluggy==0.11.0
+pox==0.2.5
+ppft==1.6.4.9
+prometheus-client==0.6.0
+promise==2.2.1
+prompt-toolkit==2.0.9
+protobuf==3.7.1
+psutil==5.6.2
+ptyprocess==0.6.0
+py==1.8.0
 pycosat==0.6.3
-
-pycurl==7.43.0.6
-
-pyflakes==2.2.0
-
-pyodbc===4.0.30
-
-pyparsing==2.4.7
-pyreadline==2.1
-
-pytest==6.2.1
-python-dateutil==2.8.1
-
-
-pywin32-ctypes==0.2.0
-pywinpty==0.5.7
-PyYAML==5.3.1
-pyzmq==20.0.0
-QDarkStyle==2.8.1
-
-QtPy==1.9.0
-
-requests-oauthlib==1.3.0
-
-rsa==4.6
-
-ruamel-yaml==0.15.87
-scikit-image==0.17.2
-
-simplegeneric==0.8.1
-
-sip==5.5.0
-
-snowballstemmer==2.0.0
-sortedcollections==1.2.1
-
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
-
-
-statsmodels==0.12.1
-
-tables==3.6.1
-
-tensorboard==2.4.0
-tensorboard-plugin-wit==1.7.0
-tensorflow==2.4.0
-tensorflow-estimator==2.4.0
+pycparser==2.19
+pydot==1.4.1
+Pygments==2.3.1
+pyOpenSSL==18.0.0
+pyparsing==2.3.1
+pyrsistent==0.14.11
+pytest-runner==4.4
+python-dateutil==2.8.0
+python-twitter==3.5
+pytz==2018.9
+PyWavelets==1.0.3
+PyYAML==5.1
+pyzmq==18.0.1
+qtconsole==4.4.3
+raven==6.10.0
+requests==2.21.0
+requests-oauthlib==1.2.0
+requests-toolbelt==0.9.1
+retrying==1.3.3
+ruamel-yaml==0.15.46
+scikit-learn==0.20.3
+scipy==1.2.1
+Send2Trash==1.5.0
+tabulate==0.8.3
+tb-nightly==1.14.0a20190301
+tensorflow==2.0.0a0
+tensorflow-datasets==1.0.2
+tensorflow-metadata==0.13.0
+tensorflow-probability==0.6.0
 termcolor==1.1.0
-terminado==0.9.1
-testpath==0.4.4
-
-
-tifffile==2020.10.1
-
-typed-ast==1.4.1
-
-unicodecsv==0.14.1
-
-virtualenv==20.2.2
-
+terminado==0.8.1
+testpath==0.4.2
+tf-estimator-nightly==1.14.0.dev2019030115
+traitlets==4.3.2
+uritemplate==3.0.0
+urllib3==1.24.1
+wcwidth==0.1.7
 webencodings==0.5.1
-Werkzeug==1.0.1
-widgetsnbextension==3.5.1
-
-win-unicode-console==0.5
-wincertstore==0.2
-wrapt==1.12.1
-
-
-xlwt==1.3.0
-xmltodict==0.12.0
-
-zict==2.0.0
-zope.event==4.5.0
+Werkzeug==0.15.2
+widgetsnbextension==3.4.2
+wrapt==1.11.1
