--- a/requirements.txt
+++ b/requirements.txt
@@ -100,13 +100,17 @@ scipy==1.2.1
 Send2Trash==1.5.0
 tabulate==0.8.3
 tb-nightly==1.14.0a20190301
-tensorflow==2.0.0a0
+tensorboard==2.4.0
+tensorboard-plugin-wit==1.7.0
+
+tensorflow-estimator==2.4.0
+termcolor==1.1.0
+terminado==0.9.1
+testpath==0.4.4
 tensorflow-datasets==1.0.2
 tensorflow-metadata==0.13.0
 tensorflow-probability==0.6.0
-termcolor==1.1.0
-terminado==0.8.1
-testpath==0.4.2
+
 
 traitlets==4.3.2
 uritemplate==3.0.0
