--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,167 @@
+absl-py==0.11.0
+alabaster==0.7.12
+
+appdirs==1.4.4
+argh==0.26.2
+
+astunparse==1.6.3
+async-generator==1.10
+atomicwrites==1.4.0
+
+backcall==0.2.0
+
+backports.tempfile==1.0
+backports.weakref==1.0.post1
+
+bkcharts==0.2
+black==19.10b0
+
+boto==2.49.0
+Bottleneck==1.3.2
+brotlipy==0.7.0
+cachetools==4.2.0
+certifi==2020.12.5
+
+click==7.1.2
+
+comtypes==1.1.8
+conda==4.9.2
+conda-build==3.20.5
+
+conda-verify==3.4.2
+contextlib2==0.6.0.post1
+
+cycler==0.10.0
+
+cytoolz==0.11.0
+
+decorator==4.4.2
+defusedxml==0.6.0
+
+distlib==0.3.1
+
+docutils==0.16
+entrypoints==0.3
+et-xmlfile==1.0.1
+fastcache==1.1.0
+filelock==3.0.12
+
 Flask==1.1.2
-tensorflow==2.4.0
+flatbuffers==1.12
+
+future==0.18.2
+gast==0.3.3
+
+glob2==0.7
+gmpy2==2.0.8
+google-auth==1.24.0
+google-auth-oauthlib==0.4.2
+google-pasta==0.2.0
+
+grpcio==1.32.0
+gunicorn==20.0.4
+h5py==2.10.0
+HeapDict==1.0.1
+
+imagesize==1.2.0
+
+itsdangerous==1.1.0
+jdcal==1.4.1
+
+Jinja2==2.11.2
+
+json5==0.9.5
+
+jupyter==1.0.0
+
+jupyterlab==2.2.6
+
 Keras==2.4.3
 Keras-Preprocessing==1.1.2
+libarchive-c==2.9
+llvmlite==0.34.0
+locket==0.2.0
+
+Markdown==3.3.3
+MarkupSafe==1.1.1
+
+mccabe==0.6.1
+menuinst==1.4.16
+mistune==0.8.4
+mkl-fft==1.2.0
+mkl-random==1.1.1
+mkl-service==2.3.0
+
+mpmath==1.1.0
+
+multipledispatch==0.6.0
+mypy-extensions==0.4.3
+navigator-updater==0.2.1
+
+numba==0.51.2
+
+oauthlib==3.1.0
+olefile==0.46
+
+parso==0.7.0
+partd==1.1.0
+
+pathspec==0.7.0
+pathtools==0.1.2
+patsy==0.5.1
+pep8==1.7.1
+
+pkginfo==1.6.1
+pluggy==0.13.1
+ply==3.11
+
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.6.0
+pycosat==0.6.3
+
+pytest==0.0.0
+python-dateutil==2.8.1
+
+pywin32==227
+pywin32-ctypes==0.2.0
+pywinpty==0.5.7
+PyYAML==5.3.1
+pyzmq==20.0.0
+QDarkStyle==2.8.1
+
+rsa==4.6
+Rtree==0.9.4
+ruamel-yaml==0.15.87
+
+snowballstemmer==2.0.0
+sortedcollections==1.2.1
+
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+
+tensorboard-plugin-wit==1.7.0
+tensorflow==2.4.0
+tensorflow-estimator==2.4.0
+termcolor==1.1.0
+terminado==0.9.1
+testpath==0.4.4
+
+unicodecsv==0.14.1
+
+webencodings==0.5.1
+Werkzeug==1.0.1
+widgetsnbextension==3.5.1
+
+win-unicode-console==0.5
+wincertstore==0.2
+wrapt==1.12.1
+
+xlwings==0.21.4
+xlwt==1.3.0
+xmltodict==0.12.0
+
