--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ SQLAlchemy==1.3.17
 Werkzeug==1.0.1
 
 
-# tensorflow==2.3.0
+tensorflow==2.4.0
 tensorflow-estimator==2.4.0
 termcolor==1.1.0
 terminado==0.9.1
